# django-standalone-setup.py

./: .travis.yml  README.md  setup.cfg  setup.py
tests/cached/examples/: @cached.py  cached(func).py
