[metadata]
name = cached
version = 2018.11.19
url = https://github.com/looking-for-a-job/cached.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = cached cache function

[options]
install_requires = 
	decorator
	public
	setuptools
packages = 
	cached
