# setup.cfg generator: https://pypi.org/project/setupcfg/
[metadata]
name = django-standalone-setup
version = 2019.03.02
url = https://github.com/looking-for-a-job/django-standalone-setup.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = django standalone

[options]
install_requires = 
	Django
	setuptools
packages = 
	django_standalone_setup
