# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-standalone-setup
version = 2019.4.13
url = https://github.com/looking-for-a-job/django-standalone-setup.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django standalone

[options]
install_requires = 
	Django>1.0
	setuptools
packages = 
	django_standalone_setup
